// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-accordion> Component Default <bolt-accordion> w/o Shadow DOM renders 1`] = `
<bolt-accordion
  no-shadow=""
  style=""
>
  <!---->
  
       
      
  <div
    aria-multiselectable="true"
    class="c-bolt-accordion"
    id="handorgel2"
    style=""
  >
    
        
    <!---->
    <!---->
    
    
    <!---->
    <bolt-accordion-item
      no-shadow=""
      style=""
    >
      <!---->
      
       
      
      <div
        class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
        style=""
      >
        <!---->
        <!---->
        
      
            
        <div
          class="c-bolt-accordion-item__trigger"
          id="handorgel2-fold1-header"
          style=""
        >
          <!---->
          
          
          <button
            aria-controls="handorgel2-fold1-content"
            aria-disabled="false"
            aria-expanded="false"
            class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
            style=""
            type="button"
          >
            
            
      
            <div
              class="c-bolt-accordion-item__trigger-content"
              style=""
            >
              
        
              <!---->
              <!---->
              <bolt-text
                class="is-first-child is-last-child"
                slot="trigger"
                style=""
              >
                Accordion item 1
              </bolt-text>
              <!---->
              <!---->
              
      
            </div>
            
      
            <span
              class="c-bolt-accordion-item__trigger-icons"
              style=""
            >
              
        
              <div
                class="c-bolt-accordion-item__trigger-icons-inner"
                style=""
              >
                
          
                <bolt-icon
                  name="chevron-down"
                  style=""
                />
                
        
              </div>
              
      
            </span>
            
    
          
          </button>
          
        
          <!---->
        </div>
        
          
    
        <!---->
        
      
        <div
          aria-labelledby="handorgel2-fold1-header"
          class="c-bolt-accordion-item__content"
          id="handorgel2-fold1-content"
          role="region"
          style=""
        >
          
        
          <div
            class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium c-bolt-accordion-item__content-inner--offset"
            style=""
          >
            
          
            <!---->
            <!---->
            
      
            <!---->
            
      
            <!---->
            <bolt-text
              class="is-first-child is-last-child"
              style=""
            >
              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
            </bolt-text>
            <!---->
            
    
            <!---->
            <!---->
            
        
          </div>
          
      
        </div>
        
    
        <!---->
        <!---->
      </div>
      
    
    
      <!---->
    </bolt-accordion-item>
    <!---->
    
    
    <!---->
    <bolt-accordion-item
      no-shadow=""
      style=""
    >
      <!---->
      
       
      
      <div
        class="c-bolt-accordion-item c-bolt-accordion-item--separator"
        style=""
      >
        <!---->
        <!---->
        
      
            
        <div
          class="c-bolt-accordion-item__trigger"
          id="handorgel2-fold2-header"
          style=""
        >
          <!---->
          
          
          <button
            aria-controls="handorgel2-fold2-content"
            aria-disabled="false"
            aria-expanded="false"
            class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
            style=""
            type="button"
          >
            
            
      
            <div
              class="c-bolt-accordion-item__trigger-content"
              style=""
            >
              
        
              <!---->
              <!---->
              <bolt-text
                class="is-first-child is-last-child"
                slot="trigger"
                style=""
              >
                Accordion item 2
              </bolt-text>
              <!---->
              <!---->
              
      
            </div>
            
      
            <span
              class="c-bolt-accordion-item__trigger-icons"
              style=""
            >
              
        
              <div
                class="c-bolt-accordion-item__trigger-icons-inner"
                style=""
              >
                
          
                <bolt-icon
                  name="chevron-down"
                  style=""
                />
                
        
              </div>
              
      
            </span>
            
    
          
          </button>
          
        
          <!---->
        </div>
        
          
    
        <!---->
        
      
        <div
          aria-labelledby="handorgel2-fold2-header"
          class="c-bolt-accordion-item__content"
          id="handorgel2-fold2-content"
          role="region"
          style=""
        >
          
        
          <div
            class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium c-bolt-accordion-item__content-inner--offset"
            style=""
          >
            
          
            <!---->
            <!---->
            
      
            <!---->
            
      
            <!---->
            <bolt-text
              class="is-first-child is-last-child"
              style=""
            >
              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
            </bolt-text>
            <!---->
            
    
            <!---->
            <!---->
            
        
          </div>
          
      
        </div>
        
    
        <!---->
        <!---->
      </div>
      
    
    
      <!---->
    </bolt-accordion-item>
    <!---->
    
    
    <!---->
    <bolt-accordion-item
      no-shadow=""
      style=""
    >
      <!---->
      
       
      
      <div
        class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
        style=""
      >
        <!---->
        <!---->
        
      
            
        <div
          class="c-bolt-accordion-item__trigger"
          id="handorgel2-fold3-header"
          style=""
        >
          <!---->
          
          
          <button
            aria-controls="handorgel2-fold3-content"
            aria-disabled="false"
            aria-expanded="false"
            class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
            style=""
            type="button"
          >
            
            
      
            <div
              class="c-bolt-accordion-item__trigger-content"
              style=""
            >
              
        
              <!---->
              <!---->
              <bolt-text
                class="is-first-child is-last-child"
                slot="trigger"
                style=""
              >
                Accordion item 3
              </bolt-text>
              <!---->
              <!---->
              
      
            </div>
            
      
            <span
              class="c-bolt-accordion-item__trigger-icons"
              style=""
            >
              
        
              <div
                class="c-bolt-accordion-item__trigger-icons-inner"
                style=""
              >
                
          
                <bolt-icon
                  name="chevron-down"
                  style=""
                />
                
        
              </div>
              
      
            </span>
            
    
          
          </button>
          
        
          <!---->
        </div>
        
          
    
        <!---->
        
      
        <div
          aria-labelledby="handorgel2-fold3-header"
          class="c-bolt-accordion-item__content"
          id="handorgel2-fold3-content"
          role="region"
          style=""
        >
          
        
          <div
            class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium c-bolt-accordion-item__content-inner--offset"
            style=""
          >
            
          
            <!---->
            <!---->
            
      
            <!---->
            
      
            <!---->
            <bolt-text
              class="is-first-child is-last-child"
              style=""
            >
              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
            </bolt-text>
            <!---->
            
    
            <!---->
            <!---->
            
        
          </div>
          
      
        </div>
        
    
        <!---->
        <!---->
      </div>
      
    
    
      <!---->
    </bolt-accordion-item>
    <!---->
    
  
    <!---->
    <!---->
    
      
  </div>
  
    
    
  <!---->
</bolt-accordion>
`;

exports[`<bolt-accordion> Component Default <bolt-accordion> with Shadow DOM renders 1`] = `
<style>
  bolt-accordion,bolt-accordion replace-with-children,bolt-accordion replace-with-grandchildren{display:block}bolt-accordion:not(:last-child){margin-bottom:1.65rem}.c-bolt-accordion{position:relative;background-color:rgba(var(--bolt-theme-background), 1)}.c-bolt-accordion--box-shadow{box-shadow:0 1px 4px 1px rgba(6,10,36,.1),0 5px 10px 0 rgba(6,10,36,.08);transition:.3s cubic-bezier(.25,.8,.25,1);border-radius:3px;border-width:1px;border-style:solid;border-color:rgba(var(--bolt-theme-text), 0.15)}
</style>
<div class="c-bolt-accordion"
     id="handorgel1"
     aria-multiselectable="true"
>
  <slot>
  </slot>
</div>
`;

exports[`<bolt-accordion> Component Default <bolt-accordion> with Shadow DOM renders 2`] = `
<style>
  bolt-accordion-item{display:block}bolt-accordion-item replace-with-children,bolt-accordion-item replace-with-grandchildren,bolt-accordion-item ssr-keep{display:block;flex-grow:1}.c-bolt-accordion-item ::slotted(.is-last-child),.c-bolt-accordion-item ::slotted(:last-child){margin-bottom:0!important}.c-bolt-accordion-item__state{display:none}.c-bolt-accordion-item--box-shadow .c-bolt-accordion-item__content{background-color:rgba(224,226,235,.1)}.c-bolt-accordion-item--box-shadow .c-bolt-accordion-item__content:after,.c-bolt-accordion-item--box-shadow .c-bolt-accordion-item__content:before{content:'';display:block;opacity:1;position:absolute;right:0;left:0;height:.206rem;pointer-events:none;will-change:opacity;transition:opacity .1s ease-in-out}.c-bolt-accordion-item--box-shadow .c-bolt-accordion-item__content:before{top:0;background:linear-gradient(to bottom,rgba(141,142,153,.1) 0,transparent 100%)}.c-bolt-accordion-item--box-shadow .c-bolt-accordion-item__content:after{bottom:0;background:linear-gradient(to bottom,transparent 0,rgba(141,142,153,.1) 100%)}.c-bolt-accordion-item--box-shadow.c-bolt-accordion-item--first-item .c-bolt-accordion-item__trigger,.c-bolt-accordion-item--box-shadow.c-bolt-accordion-item--first-item .c-bolt-accordion-item__trigger-label{border-top-right-radius:3px;border-top-left-radius:3px}.c-bolt-accordion-item--box-shadow.c-bolt-accordion-item--last-item .c-bolt-accordion-item__content,.c-bolt-accordion-item--box-shadow.c-bolt-accordion-item--last-item .c-bolt-accordion-item__trigger-label,.c-bolt-accordion-item--box-shadow.c-bolt-accordion-item--last-item .c-bolt-accordion-item__trigger:not(.c-bolt-accordion-item__trigger--open){border-bottom-right-radius:3px;border-bottom-left-radius:3px}.c-bolt-accordion-item--box-shadow.c-bolt-accordion-item--last-item .c-bolt-accordion-item__content:after{display:none}.c-bolt-accordion-item__trigger{display:flex;position:relative;margin:0}.c-bolt-accordion-item__trigger-label{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;font-family:var(--bolt-font-family-heading);font-size:1rem;line-height:1.65;display:flex;justify-content:space-between;align-items:center;-webkit-appearance:none;-moz-appearance:none;appearance:none;position:relative;width:100%;margin:0;padding:0;color:inherit;text-align:left;text-align:start;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;outline-offset:-4px;border:none;background-color:rgba(var(--bolt-theme-background), 1)}.js-fonts-loaded .c-bolt-accordion-item__trigger-label{font-family:"Open Sans","Helvetica Neue",sans-serif;font-family:var(--bolt-font-family-heading)}.c-bolt-accordion-item--icon-valign-top .c-bolt-accordion-item__trigger-label{align-items:flex-start}.c-bolt-accordion-item__trigger-label:-moz-focusring{outline:0}.c-bolt-accordion-item__trigger-label:before{content:'';display:block;opacity:0;position:absolute;top:0;right:0;bottom:0;left:0;pointer-events:none;background-color:rgba(var(--bolt-theme-primary), 0.15);will-change:opacity;transition:opacity .1s ease-in-out}.c-bolt-accordion-item__trigger-label:not(.c-bolt-accordion-item__trigger-label--inactive){cursor:pointer}.c-bolt-accordion-item__trigger-label:not(.c-bolt-accordion-item__trigger-label--inactive):hover:before{opacity:.2}.c-bolt-accordion-item__trigger-label:not(.c-bolt-accordion-item__trigger-label--inactive):active:before{opacity:1}.c-bolt-accordion-item__trigger-link{display:block;position:absolute;top:0;right:0;width:.311rem;height:100%;outline-offset:-4px}.c-bolt-accordion-item__trigger-link:after{content:'';display:block;position:absolute;top:50%;right:50%;width:.622rem;height:.622rem;border-radius:1px;border-width:3px 3px 0 0;border-style:solid;border-color:rgba(var(--bolt-theme-link), 1);transform-origin:50% 50%}.c-bolt-accordion-item__trigger-label--inactive~.c-bolt-accordion-item__trigger-link{visibility:hidden}.c-bolt-accordion-item__trigger-link--open:after{transform:rotate(135deg) translateX(-50%) translateY(50%)}.c-bolt-accordion-item__trigger-link--close:after{transform:rotate(-45deg)}.c-bolt-accordion-item__toggle-text{position:absolute;width:1px;height:1px;overflow:hidden;margin:-1px;padding:0;border:0;clip:rect(0 0 0 0);-webkit-clip-path:inset(50%);clip-path:inset(50%);white-space:nowrap}.c-bolt-accordion-item__state:checked+.c-bolt-accordion-item .c-bolt-accordion-item__trigger-link--open,.c-bolt-accordion-item__state:target+.c-bolt-accordion-item .c-bolt-accordion-item__trigger-link--open,.c-bolt-accordion-item__trigger-link--close{display:none}.c-bolt-accordion-item__state:checked+.c-bolt-accordion-item .c-bolt-accordion-item__trigger-link--close,.c-bolt-accordion-item__state:target+.c-bolt-accordion-item .c-bolt-accordion-item__trigger-link--close{display:block}.c-bolt-accordion-item__trigger--open{z-index:1}.c-bolt-accordion-item__trigger-icons{display:flex;flex-shrink:0;position:relative;transform:translateX(.25rem);overflow:hidden;color:rgba(var(--bolt-theme-link), 1);line-height:0;font-size:1.4rem}.c-bolt-accordion-item__trigger-label--inactive .c-bolt-accordion-item__trigger-icons{visibility:hidden}.c-bolt-accordion-item__trigger-icons-inner{padding:.206rem 0;display:block;transform:rotate(0);transform-origin:50% 50%;will-change:transform;transition:transform .2s ease-in-out}[aria-expanded=false] .c-bolt-accordion-item__trigger-icons-inner{transform:rotate(0)}[aria-expanded=true] .c-bolt-accordion-item__trigger-icons-inner{transform:rotate(180deg)}.c-bolt-accordion-item__trigger-content{flex-grow:1;margin-bottom:0}.c-bolt-accordion-item__content{display:none;position:relative;transform:translateY(-1rem);width:100%;height:0;will-change:transform;transition:transform .2s cubic-bezier(0,0,.3,1) .1s}.c-bolt-accordion-item__content[data-open]:not([style*=height]){visibility:visible;height:auto;transition:none}.c-bolt-accordion-item__content:not([role=region]){display:block;visibility:hidden;height:auto;max-height:0}.c-bolt-accordion-item__state:checked+.c-bolt-accordion-item .c-bolt-accordion-item__content,.c-bolt-accordion-item__state:target+.c-bolt-accordion-item .c-bolt-accordion-item__content{visibility:visible;transform:translate3d(0,0,0);max-height:none;will-change:transform,height;transition:transform .2s ease-in-out,height .2s ease-in-out}.c-bolt-accordion-item__content--open{display:block;transform:translate3d(0,0,0);transition:height .2s ease-in-out}.c-bolt-accordion-item__content-inner{opacity:0;position:relative;overflow:auto;will-change:opacity;transition:opacity .1s ease-in-out;-webkit-overflow-scrolling:touch}.c-bolt-accordion-item__content--opened .c-bolt-accordion-item__content-inner,.c-bolt-accordion-item__state:checked+.c-bolt-accordion-item .c-bolt-accordion-item__content-inner,.c-bolt-accordion-item__state:target+.c-bolt-accordion-item .c-bolt-accordion-item__content-inner{opacity:1;will-change:opacity;transition:opacity .2s ease-in-out}.c-bolt-accordion-item__state+.c-bolt-accordion-item .c-bolt-accordion-item__trigger{z-index:1}.c-bolt-accordion-item--separator{border-top-color:rgba(var(--bolt-theme-text), 0.15);border-top-style:solid;border-top-width:1px}.c-bolt-accordion-item--separator.c-bolt-accordion-item--last-item{border-bottom-color:rgba(var(--bolt-theme-text), 0.15);border-bottom-style:solid;border-bottom-width:1px}.c-bolt-accordion-item--separator.c-bolt-accordion-item--box-shadow.c-bolt-accordion-item--first-item{border-top:none}.c-bolt-accordion-item--separator.c-bolt-accordion-item--box-shadow.c-bolt-accordion-item--last-item{border-bottom:none}.c-bolt-accordion-spacing--xsmall{padding:.206rem .5rem}.c-bolt-accordion-spacing--xsmall.c-bolt-accordion-item__content-inner.c-bolt-accordion-item__content-inner--offset,.c-bolt-accordion-spacing--xsmall.c-bolt-accordion-item__trigger-label.c-bolt-accordion-item__trigger-label--offset{padding-right:calc(1.9rem)}.c-bolt-accordion-spacing--xsmall.c-bolt-accordion-item__content-inner{padding-bottom:.412rem}.c-bolt-accordion-spacing--small{padding:.412rem 1rem}.c-bolt-accordion-spacing--small.c-bolt-accordion-item__content-inner.c-bolt-accordion-item__content-inner--offset,.c-bolt-accordion-spacing--small.c-bolt-accordion-item__trigger-label.c-bolt-accordion-item__trigger-label--offset{padding-right:calc(2.4rem)}.c-bolt-accordion-spacing--small.c-bolt-accordion-item__content-inner{padding-bottom:.825rem}.c-bolt-accordion-spacing--medium{padding:.825rem 2rem}.c-bolt-accordion-spacing--medium.c-bolt-accordion-item__content-inner.c-bolt-accordion-item__content-inner--offset,.c-bolt-accordion-spacing--medium.c-bolt-accordion-item__trigger-label.c-bolt-accordion-item__trigger-label--offset{padding-right:calc(3.4rem)}.c-bolt-accordion-spacing--medium.c-bolt-accordion-item__content-inner{padding-bottom:1.65rem}.c-bolt-accordion-spacing--large{padding:1.65rem 4rem}.c-bolt-accordion-spacing--large.c-bolt-accordion-item__content-inner.c-bolt-accordion-item__content-inner--offset,.c-bolt-accordion-spacing--large.c-bolt-accordion-item__trigger-label.c-bolt-accordion-item__trigger-label--offset{padding-right:calc(5.4rem)}.c-bolt-accordion-spacing--large.c-bolt-accordion-item__content-inner{padding-bottom:3.3rem}.c-bolt-accordion-spacing--xxxlarge{padding:13.2rem 32rem}.c-bolt-accordion-spacing--xxxlarge.c-bolt-accordion-item__content-inner.c-bolt-accordion-item__content-inner--offset,.c-bolt-accordion-spacing--xxxlarge.c-bolt-accordion-item__trigger-label.c-bolt-accordion-item__trigger-label--offset{padding-right:calc(33.4rem)}.c-bolt-accordion-spacing--xxxlarge.c-bolt-accordion-item__content-inner{padding-bottom:26.4rem}
</style>
<div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item">
  <div class="c-bolt-accordion-item__trigger"
       id="handorgel1-fold1-header"
  >
    <button type="button"
            class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
            aria-controls="handorgel1-fold1-content"
            aria-expanded="false"
            aria-disabled="false"
    >
      <div class="c-bolt-accordion-item__trigger-content">
        <slot name="trigger">
        </slot>
      </div>
      <span class="c-bolt-accordion-item__trigger-icons">
        <div class="c-bolt-accordion-item__trigger-icons-inner">
          <bolt-icon name="chevron-down">
          </bolt-icon>
        </div>
      </span>
    </button>
  </div>
  <div class="c-bolt-accordion-item__content"
       id="handorgel1-fold1-content"
       role="region"
       aria-labelledby="handorgel1-fold1-header"
  >
    <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium c-bolt-accordion-item__content-inner--offset">
      <slot>
      </slot>
    </div>
  </div>
</div>
`;

exports[`<bolt-accordion> Component Inactive item 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Active accordion item
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item inactive>
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <div class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-item__trigger-label--inactive c-bolt-accordion-spacing--medium">
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Inactive accordion item
                </div>
              </ssr-keep>
            </div>
          </div>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Active accordion item
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component basic usage 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component content spacing: large 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item content-spacing="large">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--large">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component content spacing: medium 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item content-spacing="medium">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component content spacing: none 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item content-spacing="none">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--none">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component content spacing: small 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item content-spacing="small">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--small">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component content spacing: xsmall 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item content-spacing="xsmall">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--xsmall">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component expand single items: false 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component expand single items: true 1`] = `
<bolt-accordion single>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: large 1`] = `
<bolt-accordion spacing="large">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--large"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--large">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--large"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--large">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--large"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--large">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: medium 1`] = `
<bolt-accordion spacing="medium">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: none 1`] = `
<bolt-accordion spacing="none">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--none"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--none">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--none"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--none">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--none"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--none">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: small 1`] = `
<bolt-accordion spacing="small">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--small"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--small">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--small"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--small">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--small"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--small">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: xsmall 1`] = `
<bolt-accordion spacing="xsmall">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--xsmall"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--xsmall">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--xsmall"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 2
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--xsmall">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--xsmall"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 3
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-item__content-inner--offset c-bolt-accordion-spacing--xsmall">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component trigger spacing: large 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item trigger-spacing="large">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--large"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component trigger spacing: medium 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item trigger-spacing="medium">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--medium"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component trigger spacing: none 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item trigger-spacing="none">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--none"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component trigger spacing: small 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item trigger-spacing="small">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--small"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component trigger spacing: xsmall 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item trigger-spacing="xsmall">
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label for="c-bolt-accordion-item-12345"
                 class="c-bolt-accordion-item__trigger-label c-bolt-accordion-item__trigger-label--offset c-bolt-accordion-spacing--xsmall"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <ssr-keep for="bolt-accordion-item">
                <div slot="trigger">
                  Accordion item 1
                </div>
              </ssr-keep>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium">
            <ssr-keep for="bolt-accordion-item">
              This is the accordion content.
            </ssr-keep>
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;
